# study

./: .gitignore  README.md
demo/: README.md
demo/application/: qemu.sh
demo/application/cmake/: CMakeLists.txt  README.md
demo/application/cmake/doc/: dir.md
demo/application/cmake/format/: format.md
demo/application/cmake/inc/module_world/: world.h
demo/application/cmake/main/: CMakeLists.txt
demo/application/cmake/main/inc/: ver.h
demo/application/cmake/main/src/: main.c  ver.c
demo/application/cmake/modules/module_hello/: CMakeLists.txt
demo/application/cmake/modules/module_hello/inc/: say.h
demo/application/cmake/modules/module_hello/src/: hello.c  say.c
demo/application/cmake/modules/module_hello/test/: test.c
demo/application/cmake/modules/module_world/: CMakeLists.txt
demo/application/cmake/modules/module_world/inc/: say.h
demo/application/cmake/modules/module_world/src/: say.c  world.c
demo/application/cmake/modules/module_world/test/: test.c
demo/application/make/: Makefile  main.cpp
demo/application/make/inc/: c.h
demo/application/make/src/: a.c  b.c
demo/application/vscode/hello_vsc/: .clang-format  CMakeLists.txt
demo/application/vscode/hello_vsc/resources/: resources.qrc
demo/application/vscode/hello_vsc/widget/: widget.cpp  widget.ui
demo/docker/: Readme.md  build.sh
demo/docker/common/bash/: bash_aliases  bashrc  profile
demo/docker/common/git/: config
demo/docker/common/other/distro/bookworm/: debian.sources
demo/docker/common/other/distro/bullseye/: bear.tgz  sources.list
demo/docker/common/other/distro/buster/: sources.list
demo/docker/common/other/vsc_helper/: .gitignore  Readme.md  install.sh  proxy.sh
demo/docker/common/ssh/: authorized_keys  config
demo/docker/common/vim/: vimrc.local  yank
demo/docker/imx6/: Dockerfile  docker-compose.yml  genimage
demo/docker/rk3506/: Dockerfile  docker-compose.yml
demo/docker/rk3562/: Dockerfile  docker-compose.yml
demo/docker/t113/: Dockerfile  docker-compose.yml
demo/docker/t527/: Dockerfile  docker-compose.yml
demo/kernel/module/: Makefile  test.c
demo/language/c/: asm_with_c.c  bg.c  const.c  define_string.c  foo.c  foo.h  main.c  max.c  pack.c  printf.c  time.c
demo/language/c++/: const.cpp  virtualTable_clang.cpp  virtualTable_gcc.cpp  virtualTable_msvc.cpp
demo/language/c/inline/: foo.c  foo.h  hello.c
demo/language/c/pack/: pack.c  pack.h
demo/language/c/rpath/: build.sh  foo.c  foo.h  main.c
demo/language/c/signal/: kill_9.c
demo/language/c/table/: statistics.c  table.c
demo/project/cmake/: CMakeLists.txt
demo/project/cmake/inc/module_hello/: hello.h
demo/project/cmake/main/: CMakeLists.txt
demo/project/cmake/main/inc/: buildCfg.h.in
demo/project/cmake/main/src/: main.c
demo/project/cmake/modules/: CMakeLists.txt
demo/project/cmake/modules/module_hello/src/: hello.c
demo/project/cmake/modules/module_world/: CMakeLists.txt
demo/project/cmake/modules/module_world/src/: world.c
demo/project/make/: Makefile
demo/project/make/inc/: a.h  b.h
demo/project/make/src/: c.c
demo/scaffold/hello_vsc/: .clang-format  CMakeLists.txt  main.cpp  tasks.json
demo/scaffold/hello_vsc/src/: main.cpp  widget.cpp  widget.hpp
demo/scaffold/hello_vsc/widget/: widget.cpp  widget.ui
note/: README.md
note/application/: bear.md  clangd.md  cmake.md  firefox.md  git.md  lvm.md  makefile.md  modetest.md  qemu.md  repo.md  samba.md  stm32cubeprog.md  vscode.md
note/bareMetal/: scatterFile.md
note/criteria/: elf.md  nrzi.md  spi.md  usb.md
note/debug/: ALSR.md
note/kernel/android/: androidBuild.md  lock.md  mtk.md  qsee.md
note/kernel/linux/: amba.md  char.md  debug.md  do_div.md  dts_describe.md  dts_kernel_function.md  dts_parse.md  gpio.md  io_model.md  ipc.md  mem_share.md  of_irq.md  spi.md  time.md  v4l2.md
note/language/arm_asm/: reg.md
note/language/c/: keyword.md  variable_argument.md
note/language/c++/: memory.md
note/language/scripts/lua/: hello.md
note/language/scripts/shell/: shell.md
note/platform/: linux.md  msys.md  vm.md  wsl.md
note/scaffold/: Qt.md  archInstall.md  binutils.md  git.md  linuxCommand.md  samba.md  vim.md  vscode.md  wsl.md
note/system/: buildroot.md  docker.md  linux.md  msys.md  vm.md
